# Oreplot-Alpha-Version

./: .replit  README.md  advanced_ai_analyzer.py  ai_access_control.py  ai_analyzer.py  app.py  app_backup.py  auth.py  comparables_ingestion.py  comparables_manager.py  comparables_matcher.py  comparables_scheduler.py  create_admin.py  create_customer.py  create_test_user.py  database.py  decision_tree_emv_engine.py  document_extractor.py  drill_qaqc_analyzer.py  financial_engine.py  financial_exports.py  format_utils.py  income_dcf_engine.py  kilburn_valuation.py  landing.py  market_data.py  market_multiples_engine.py  migrate_app.py  models.py  monte_carlo_engine.py  probability_dcf_engine.py  project_manager.py  pyproject.toml  replit.md  report_generator.py  scoring_engine.py  template_manager.py  training_integration.py  training_rag.py
.streamlit/: config.toml
attached_assets/: Assessment Methodology_1761761026911.txt  Formula's description_1764177743371.txt  Pasted-Advanced-AI-section-shouldn-t-be-like-a-calculator-it-should-be-AI-Agent-using-GPT5-or-GPT5-1-or-m-1764177690047_1764177690049.txt  Required Documents_1761761026912.txt
components/: ai_chat.py  navigation.py
page_modules/: account_settings_page.py  admin_comparables_page.py  admin_panel_page.py  advanced_ai_page.py  ai_training_page.py  app_settings_page.py  billing_page.py  comparables_page.py  dashboard_page.py  financials_page.py  login_page.py  profile_page.py  projects_page.py  reports_page.py  team_page.py
test_data/: drill_summary.csv  sample_mining_project.txt
(+1 files in other folders)
