[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "apscheduler>=3.11.1",
    "bcrypt>=5.0.0",
    "docx>=0.2.4",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.5",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "poppler-utils>=0.1.0",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
]
